--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
     "@vapi-ai/web": "^2.3.8",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.3",
@@ -22,6 +23,7 @@
     "motion": "^12.23.6",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
+    "openai": "^5.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.6",
@@ -32,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
