--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.6",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
@@ -27,7 +29,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
